# hvy-desktop-applications

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: electron-port-checklist.md
scripts/: build-host-apps.mjs  convert-png-to-rgba.mjs  create-tauri-icon.mjs  electron-dev.mjs  electron-dmg.mjs  electron-package.mjs  electron-windows-installer.mjs  electron-windows.nuspectemplate  smoke-frontend.mjs  tauri-cli.mjs
src/: aiClient.ts  aiProviders.ts  backend.ts  colorTheme.ts  debugLog.ts  fileActions.ts  hvy.test.ts  hvy.ts  linkOpening.test.ts  linkOpening.ts  main.ts  mainDocumentSave.ts  mainHandlers.ts  mainHandlersDocument.ts  mainHandlersSettings.ts  mainHandlersWorkspace.ts  mainStartup.ts  mainUtilities.ts  mainWorkspaceFilter.ts  mainWorkspaceUtils.test.ts  mainWorkspaceUtils.ts  state.test.ts  state.ts  styles.css  templates.ts  ui.test.ts  ui.ts  uiShortcuts.ts  vite-env.d.ts
src-electron/: main.cjs  preload.cjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/resources/: hvy-galaxy-ai-guide.hvy  hvy-galaxy.hvy  hvy-guide.hvy
src-tauri/src/: app_runtime.rs  commands.rs  lib.rs  main.rs  mcp.rs  state_settings.rs  tests.rs  types.rs  utils.rs  workspace_files.rs
src-tauri/src/mcp/: commands_http.rs  stdio_client.rs  tools.rs  types.rs
src/assets/: hvy-galaxy.hvy
src/templates/: blank.hvy  blank.phvy  flashcards.thvy  notes.hvy  report.hvy  study-tools.thvy
