[package]
name = "hvy-galaxy"
version = "0.1.0"
description = "HVY Galaxy desktop app"
authors = ["HVY"]
edition = "2021"

[lib]
name = "hvy_galaxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.10"
quick-xml = "0.36"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"

[dev-dependencies]
tempfile = "3"
